--- a/www/pluginscenters.html
+++ b/www/pluginscenters.html
@@ -108,11 +108,21 @@
 
                             <tr>
                                 <td class="release">
+                                    <div><b>VisualVM 1.3.2</b></div>
+                                </td>
+
+                                <td class="plugincenter">
+                                    <div><small><a href="http://www.netbeans.info/uc/show_uc_content.php?ucurl=http://bits.netbeans.org/VisualVM/uc/release132/updates.xml">http://visualvm.java.net/uc/release132/updates.xml.gz</a></small></div>
+                                </td>
+                            </tr>
+
+                            <tr>
+                                <td class="release">
                                     <div><b>VisualVM 1.3.1</b></div>
                                 </td>
 
                                 <td class="plugincenter">
-                                    <div><small><a href="http://www.netbeans.info/uc/show_uc_content.php?ucurl=http://bits.netbeans.org/VisualVM/uc/release131/updates.xml">https://visualvm.dev.java.net/uc/release131/updates.xml.gz</a></small></div>
+                                    <div><small><a href="http://www.netbeans.info/uc/show_uc_content.php?ucurl=http://bits.netbeans.org/VisualVM/uc/release131/updates.xml">http://visualvm.java.net/uc/release131/updates.xml.gz</a></small></div>
                                 </td>
                             </tr>
 
@@ -122,7 +132,7 @@
                                 </td>
 
                                 <td class="plugincenter">
-                                    <div><small><a href="http://www.netbeans.info/uc/show_uc_content.php?ucurl=http://bits.netbeans.org/VisualVM/uc/release13/updates.xml">https://visualvm.dev.java.net/uc/release13/updates.xml.gz</a></small></div>
+                                    <div><small><a href="http://www.netbeans.info/uc/show_uc_content.php?ucurl=http://bits.netbeans.org/VisualVM/uc/release13/updates.xml">http://visualvm.java.net/uc/release13/updates.xml.gz</a></small></div>
                                 </td>
                             </tr>
 
@@ -132,7 +142,7 @@
                                 </td>
 
                                 <td class="plugincenter">
-                                    <div><small><a href="http://www.netbeans.info/uc/show_uc_content.php?ucurl=http://bits.netbeans.org/VisualVM/uc/release122/updates.xml">https://visualvm.dev.java.net/uc/release122/updates.xml.gz</a></small></div>
+                                    <div><small><a href="http://www.netbeans.info/uc/show_uc_content.php?ucurl=http://bits.netbeans.org/VisualVM/uc/release122/updates.xml">http://visualvm.java.net/uc/release122/updates.xml.gz</a></small></div>
                                 </td>
                             </tr>
 
@@ -144,7 +154,7 @@
                                 </td>
 
                                 <td class="plugincenter">
-                                    <div><small><a href="http://www.netbeans.info/uc/show_uc_content.php?ucurl=http://bits.netbeans.org/VisualVM/uc/release12/updates.xml">https://visualvm.dev.java.net/uc/release12/updates.xml.gz</a></small></div>
+                                    <div><small><a href="http://www.netbeans.info/uc/show_uc_content.php?ucurl=http://bits.netbeans.org/VisualVM/uc/release12/updates.xml">http://visualvm.java.net/uc/release12/updates.xml.gz</a></small></div>
                                 </td>
                             </tr>
 
@@ -154,7 +164,7 @@
                                 </td>
 
                                 <td class="plugincenter">
-                                    <div><small><a href="http://www.netbeans.info/uc/show_uc_content.php?ucurl=http://bits.netbeans.org/VisualVM/uc/release111/updates.xml">https://visualvm.dev.java.net/uc/release111/updates.xml.gz</a></small></div>
+                                    <div><small><a href="http://www.netbeans.info/uc/show_uc_content.php?ucurl=http://bits.netbeans.org/VisualVM/uc/release111/updates.xml">http://visualvm.java.net/uc/release111/updates.xml.gz</a></small></div>
                                 </td>
                             </tr>
 
@@ -164,7 +174,7 @@
                                 </td>
 
                                 <td class="plugincenter">
-                                    <div><small><a href="http://www.netbeans.info/uc/show_uc_content.php?ucurl=http://bits.netbeans.org/VisualVM/uc/release11/updates.xml">https://visualvm.dev.java.net/uc/release11/updates.xml.gz</a></small></div>
+                                    <div><small><a href="http://www.netbeans.info/uc/show_uc_content.php?ucurl=http://bits.netbeans.org/VisualVM/uc/release11/updates.xml">http://visualvm.java.net/uc/release11/updates.xml.gz</a></small></div>
                                 </td>
                             </tr>
 
@@ -174,7 +184,7 @@
                                 </td>
 
                                 <td class="plugincenter">
-                                    <div><small><a href="http://www.netbeans.info/uc/show_uc_content.php?ucurl=http://bits.netbeans.org/VisualVM/uc/release101/updates.xml">https://visualvm.dev.java.net/uc/release101/updates.xml.gz</a></small></div>
+                                    <div><small><a href="http://www.netbeans.info/uc/show_uc_content.php?ucurl=http://bits.netbeans.org/VisualVM/uc/release101/updates.xml">http://visualvm.java.net/uc/release101/updates.xml.gz</a></small></div>
                                 </td>
                             </tr>
 
@@ -184,7 +194,7 @@
                                 </td>
 
                                 <td class="plugincenter">
-                                    <div><small><a href="http://www.netbeans.info/uc/show_uc_content.php?ucurl=http://bits.netbeans.org/VisualVM/uc/release10/updates.xml">https://visualvm.dev.java.net/uc/release10/updates.xml.gz</a></small></div>
+                                    <div><small><a href="http://www.netbeans.info/uc/show_uc_content.php?ucurl=http://bits.netbeans.org/VisualVM/uc/release10/updates.xml">http://visualvm.java.net/uc/release10/updates.xml.gz</a></small></div>
                                 </td>
                             </tr>
 
@@ -203,7 +213,7 @@
                                 </td>
 
                                 <td class="plugincenter">
-                                    <div><small><a href="http://www.netbeans.info/uc/show_uc_content.php?ucurl=http://bits.netbeans.org/VisualVM/uc/6u20/updates.xml">https://visualvm.dev.java.net/uc/6u20/updates.xml.gz</a></small></div>
+                                    <div><small><a href="http://www.netbeans.info/uc/show_uc_content.php?ucurl=http://bits.netbeans.org/VisualVM/uc/6u20/updates.xml">http://visualvm.java.net/uc/6u20/updates.xml.gz</a></small></div>
                                 </td>
                             </tr>
 
@@ -217,7 +227,7 @@
                                 </td>
 
                                 <td class="plugincenter">
-                                    <div><small><a href="http://www.netbeans.info/uc/show_uc_content.php?ucurl=http://bits.netbeans.org/VisualVM/uc/6u18/updates.xml">https://visualvm.dev.java.net/uc/6u18/updates.xml.gz</a></small></div>
+                                    <div><small><a href="http://www.netbeans.info/uc/show_uc_content.php?ucurl=http://bits.netbeans.org/VisualVM/uc/6u18/updates.xml">http://visualvm.java.net/uc/6u18/updates.xml.gz</a></small></div>
                                 </td>
                             </tr>
 
@@ -233,7 +243,7 @@
                                 </td>
 
                                 <td class="plugincenter">
-                                    <div><small><a href="http://www.netbeans.info/uc/show_uc_content.php?ucurl=http://bits.netbeans.org/VisualVM/uc/6u14/updates.xml">https://visualvm.dev.java.net/uc/6u14/updates.xml.gz</a></small></div>
+                                    <div><small><a href="http://www.netbeans.info/uc/show_uc_content.php?ucurl=http://bits.netbeans.org/VisualVM/uc/6u14/updates.xml">http://visualvm.java.net/uc/6u14/updates.xml.gz</a></small></div>
                                 </td>
                             </tr>
 
@@ -247,7 +257,7 @@
                                 </td>
 
                                 <td class="plugincenter">
-                                    <div><small><a href="http://www.netbeans.info/uc/show_uc_content.php?ucurl=http://bits.netbeans.org/VisualVM/uc/6u11/updates.xml">https://visualvm.dev.java.net/uc/6u11/updates.xml.gz</a></small></div>
+                                    <div><small><a href="http://www.netbeans.info/uc/show_uc_content.php?ucurl=http://bits.netbeans.org/VisualVM/uc/6u11/updates.xml">http://visualvm.java.net/uc/6u11/updates.xml.gz</a></small></div>
                                 </td>
                             </tr>
 
@@ -259,7 +269,7 @@
                                 </td>
 
                                 <td class="plugincenter">
-                                    <div><small><a href="http://www.netbeans.info/uc/show_uc_content.php?ucurl=http://bits.netbeans.org/VisualVM/uc/6u7/updates.xml">https://visualvm.dev.java.net/uc/6u7/updates.xml.gz</a></small></div>
+                                    <div><small><a href="http://www.netbeans.info/uc/show_uc_content.php?ucurl=http://bits.netbeans.org/VisualVM/uc/6u7/updates.xml">http://visualvm.java.net/uc/6u7/updates.xml.gz</a></small></div>
                                 </td>
                             </tr>
 
