--- a/www/pluginscenters.html
+++ b/www/pluginscenters.html
@@ -209,6 +209,22 @@
 
                             <tr>
                                 <td class="release">
+                                    <div><b>JDK 6 Update 25</b></div>
+                                    <hr>
+                                    <div><b>JDK 6 Update 24</b></div>
+                                    <hr>
+                                    <div><b>JDK 6 Update 23</b></div>
+                                </td>
+
+                                <td class="plugincenter">
+                                    <div><small><a href="http://www.netbeans.info/uc/show_uc_content.php?ucurl=http://bits.netbeans.org/VisualVM/uc/6u23/updates.xml">http://visualvm.java.net/uc/6u23/updates.xml.gz</a></small></div>
+                                </td>
+                            </tr>
+
+                            <tr>
+                                <td class="release">
+                                    <div><b>JDK 6 Update 22</b></div>
+                                    <hr>
                                     <div><b>JDK 6 Update 21</b></div>
                                 </td>
 
