--- a/www/releases.html
+++ b/www/releases.html
@@ -94,6 +94,8 @@
 
                             <td>
 
+                                <div><b>JDK 6 Update 26</b><br><small style="margin-left: 10px;">Released: June 7th, 2011, <a href="http://www.oracle.com/technetwork/java/javase/6u26releasenotes-401875.html">Release Notes</a></small></div>
+                                <hr>
                                 <div><b>JDK 6 Update 25</b><br><small style="margin-left: 10px;">Released: April 21st, 2011, <a href="http://www.oracle.com/technetwork/java/javase/6u25releasenotes-356444.html">Release Notes</a></small></div>
                                 <hr>
                                 <div><b>JDK 6 Update 24</b><br><small style="margin-left: 10px;">Released: February 15th, 2011, <a href="http://www.oracle.com/technetwork/java/javase/6u24releasenotes-307697.html">Release Notes</a></small></div>
