--- a/www/releases.html
+++ b/www/releases.html
@@ -84,8 +84,7 @@
                             </td>
 
                             <td>
-                                <div>not yet released</div>
-                            </td>
+                                <div><b>JDK 7</b><br><small style="margin-left: 10px;">Released: July 28th, 2011, <a href="http://www.oracle.com/technetwork/java/javase/jdk7-relnotes-429209.html">Release Notes</a></small></div>                            </td>
                         </tr>
                        <tr>
                             <td>
