--- a/www/releases.html
+++ b/www/releases.html
@@ -92,7 +92,8 @@
                             </td>
 
                             <td>
-
+                                <div><b>JDK 6 Update 27</b><br><small style="margin-left: 10px;">Released: August 16th, 2011, <a href="http://www.oracle.com/technetwork/java/javase/6u27-relnotes-444147.html">Release Notes</a></small></div>
+                                <hr>
                                 <div><b>JDK 6 Update 26</b><br><small style="margin-left: 10px;">Released: June 7th, 2011, <a href="http://www.oracle.com/technetwork/java/javase/6u26releasenotes-401875.html">Release Notes</a></small></div>
                                 <hr>
                                 <div><b>JDK 6 Update 25</b><br><small style="margin-left: 10px;">Released: April 21st, 2011, <a href="http://www.oracle.com/technetwork/java/javase/6u25releasenotes-356444.html">Release Notes</a></small></div>
