--- a/www/saplugin.html
+++ b/www/saplugin.html
@@ -46,41 +46,37 @@
             
             <h1>SA-Plugin for VisualVM</h1>
 <p>
-SA Plugin makes Serviceability Agent's features and utilities available in VisualVM. Serviceability Agent is an out-of-process snapshot debugger for Hotspot Java Virtual Machine. It can be used to explore Java Objects and Hotspot Data Structures in running processes as well as core files. More details here: 
+SA-Plugin makes key features and utilities of Serviceability Agent available in VisualVM. Serviceability Agent is an out-of-process snapshot debugger for Hotspot Java Virtual Machine. It can be used to explore Java Objects and Hotspot Data Structures in running processes as well as core files. More details here:
 <a href=http://www.usenix.org/events/jvm01/full_papers/russell/russell_html/index.html> http://www.usenix.org/events/jvm01/full_papers/russell/russell_html/index.html</a> </p>
 
 <p> SA-Plugin brings those powerful features of Serviceability Agent to VisualVM - All-in-One Java Troubleshooting Tool. This Plugin makes SA utilities available in the following four panels in VisualVM:</p>
 <p>
 <b>Java Threads / Java Stack Trace: </b>
 <ul>
-<li>
-It shows all the Java Threads in the process. </li>
-<li> Double click on any thread or clicking on the 'Open Inspector' icon on Java Threads Panel shows internal details of the thread object in another 'Oop Inspector' panel. </li>
-<li> Clicking on the 'Show Stack Trace' icon on Java Threads Panel shows thread's stack trace. </li>
+<li>This panel shows all the Java Threads in the process. </li>
+<li> Double-click on any thread or clicking the 'Open Inspector' icon on Java Threads Panel brings up 'Oop Inspector' panel that shows internal details of the thread object. </li>
+<li> Clicking on the 'Show Stack Trace' icon on Java Threads Panel shows the stack trace of the selected thread. </li>
 </ul>
 </p>
 
 <p>
 <b>Oop Inspector: </b>
 <ul>
-<li>All the java objects in hotspot VM are represented as Oops - 'Ordinary Object Pointer'.  The 'Oop Inspector' panel shows details of Oops. The ability to see all the internal fields of any java object provides a great debugging help. </li>
-<li>This also provides the ability to 'compute the liveness' of any Oop in the Java Heap.</li>
+<li>All the java objects in Hotspot VM are represented as Oops - 'Ordinary Object Pointer'.  The 'Oop Inspector' panel shows details of Oops. The ability to see all the internal fields of any java object provides a great debugging help. </li>
 </ul>
 </p>
 
 <p>
-<b>Memory Viewer: </b>
+<b>Code Viewer: </b>
 <ul>
-<li>Shows values at any address in the Java Heap</li>
+<li>Shows method/klass object if the given address is methodOop/klassOop, and compiled code if the given address is PC in compiled code.</li>
 </ul>
 </p>
 
 <p>
 <b>Find Panel: </b>
 <ul>
-<li>Find Address in Heap: Shows where all the given address is assessed in Java Heap</li>
-<li>Find Address in CodeCache :  Shows where all the given address is assessed in Compiler's codecache.</li>
-<li>Find Pointer: Find where a pointer lies in Java Heap. e.g 
+    <li>Find Pointer: Shows where a pointer lies in process memory e.g
 </p>
 <p><i><center>
 Address 0x10100088: In new generation   eden [0x10010000,0x1001e950,0x100f0000) space capacity = 917504, 6.509835379464286 used
@@ -88,12 +84,14 @@ Address 0x10100088: In new generation   eden [0x10010000,0x1001e950,0x100f0000) 
   to   [0x100f0000,0x100f0000,0x10100000) space capacity = 65536, 0.0 used
 </p></i></center>
 </li>
+<li>Find Value in Heap: Shows all the locations where the given address is referenced in Java Heap</li>
+<li>Find Value in CodeCache :  Shows all the locations where the given address is referenced in compiler codecache.</li>
 </ul>
 
 <p>
 <b> How to install SAPlugin: </b>
 <ul>
-<li> In VisualVM main menu choose Tools | Plugins, Plugins dialog is opened. </li>
+<li> In VisualVM main menu, choose Tools | Plugins, Plugins dialog is opened. </li>
 <li> Switch to Available Plugins tab and select SAPlugin. </li>
 <li> Click the Install button, review and accept SAPlugin license and wait for the plugin to be downloaded and installed. </li>
 </ul>
@@ -107,21 +105,21 @@ e.g. on Solaris-Sparc sa-jdi.jar and libsaproc.so should be present in lib/ and 
 folders respectively. 
 </li>
 <li> Double click the process in VisualVM. With SAPlugin installed, 'SA Plugin' tab will also appear in VisualVM.</li>
-<li> In 'SA Plugin' tab, click on 'Attach to Process'. This will attach serviceability agent to the process and will bring up 'Java Threads Panel' and also other three panels in hidden mode. Please note that this might take few seconds.<br>
+<li> In 'SA Plugin' tab, click on 'Attach to Process'. This will attach Serviceability Agent to the process and will bring up 'Java Threads Panel' and also other three panels in hidden mode. Please note that this might take few seconds.<br></li>
 <img src="images/saplugin_1.png"/>
-</li>
-<li> Other tabs for the attached process will not be usable as long as SA Plugin is attached to the process, so one needs to detach SA Plugin from the process before using it's other tabs in VisualVM. When SA Plugin gets attached to the process, a message box is shown with this information.<br>
+
+<li> Other tabs for the attached process will not be usable as long as SAPlugin is attached to the process, so one needs to detach SA Plugin from the process before using its other tabs in VisualVM. When SA Plugin gets attached to the process, a message box is shown with this information.<br>
 <img src="images/saplugin_2.png"/>
 </li>
-<li> Now, one can look at Java Threads, their stack traces, look at any Oop, search any address in heap and look at disassembly at any address etc. </li>
+<li> Now, one can look at Java Threads, their stack traces, look at any Oop, search any address in heap and look at the compiled code at any address etc. </li>
 <li> Click on 'Detach from Process' to detach it from the process. </li>
-</li> SAPlugin also works with core dumps in VisualVM.
+<li>SAPlugin also works with core dumps in VisualVM.</li>
 </ul>
 </p>
 
 <p>
 <b>JDK versions supported</b> <br>
-- 1.7.0-b64 and later on all platforms.   <br>
+- 1.7.0 on all platforms.   <br>
 - 6u17 and later on Solaris and Linux (because SA binaries are not shipped with jdk6 on Windows)
 </p>
 <br>
@@ -134,10 +132,10 @@ folders respectively.
 <b>Oop Inspector</b><br>
 <img src="images/saplugin_5.png" />
 <br><br>
-<b>Memory Viewer</b><br>
+<b>Code Viewer</b><br>
 <img src="images/saplugin_6.png" />
 <br><br>
-<b>Find Address Panel</b><br>
+<b>Find Panel</b><br>
 <img src="images/saplugin_7.png" />
 
            
