CVS -> SVN conversion in build instructions
git-svn-id: https://svn.java.net/svn/visualvm~svn/trunk@2983 ba0df5e5-9053-6d9f-941f-f112716aa91a

--- a/www/build.html
+++ b/www/build.html
@@ -18,10 +18,10 @@ Build instructions for the latest stable version <b>VisualVM 1.3.2</b>. If you w
     <li><a href="build/build101.html">VisualVM 1.0.1</a></li>
     <li><a href="build/build10.html">VisualVM 1.0</a></li>
 </ul>
-Check out source code with a CVS client using the following command. Note: replace <code>username</code> with your own username.<br>
-<code>cvs -d :pserver:username@cvs.dev.java.net:/cvs login</code><br>
-followed by<br>
-<code> cvs -d :pserver:username@cvs.dev.java.net:/cvs checkout -r release132 -P visualvm</code><br>
+Check out source code with a SVN client using the following command. <br>
+ 
+ 
+<code> svn checkout https://svn.java.net/svn/visualvm~svn/branches/release132</code><br>
 </p>
 
 <p>There are two suites:</p>
