updated eclipse launcher
git-svn-id: https://svn.java.net/svn/visualvm~svn/trunk@3007 ba0df5e5-9053-6d9f-941f-f112716aa91a

--- a/www/eclipse-launcher.html
+++ b/www/eclipse-launcher.html
@@ -63,15 +63,27 @@
                     <a name="download"></a>
                     <h3>Download</h3>
                     <div style="background: #f0f1f2; padding: 10px; padding-left: 20px; margin-bottom: 10px;">
-                        <div><a href="http://java.net/downloads/visualvm/release11/visualvm-launcher.zip"><span style="font-size: 14px; font-weight: bold;">VisualVM Launcher</span></a> (.zip, 42KB)</div>
+                        <div><a href="http://java.net/projects/visualvm/downloads/download/release133/visualvm_launcher_eclipse_36.zip"><span style="font-size: 14px; font-weight: bold;">VisualVM Launcher (Eclipse 3.6+)</span></a> (.zip, 39.7KB)</div>
+                        <div><a href="http://java.net/downloads/visualvm/release11/visualvm-launcher.zip"><span style="font-size: 10px; font-weight: bold;">VisualVM Launcher (Previous Version)</span></a> (.zip, 42KB)</div>
                     </div>
 
                     <a name="installation"></a>
                     <h3>Installation</h3>
                     <div>
-                        <ol>
-                            <li>Unzip the archive into your Eclipse installation directory</li>
-                        </ol>
+                        <ul>
+                           <li> <span style="font-size: 14px; font-weight: bold;">Eclipse 3.6+</span>
+                              <ol>
+                                <li>Unzip the archive into directory of your choice</li>
+	                        <li>Add local update site pointing to the chosen directory</li>
+                                <li>Install VisualVM Launcher Feature</li>
+                              </ol>
+                           </li>
+                           <li> <span style="font-size: 14px; font-weight: bold;">Eclipse 3.5</span>
+                              <ol>
+                                 <li>Unzip the archive into your Eclipse installation directory</li>
+                              </ol>
+                           </li>
+                        </ul>
                     </div>
 
                     <a name="preferences"></a>
