--- a/www/build.html
+++ b/www/build.html
@@ -1,13 +1,14 @@
 <html>
 <head>
-<title>Build guide for VisualVM 1.3.2</title>
+<title>Build guide for VisualVM 1.3.3</title>
 <meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1">
 </head>
 <body>
 <p>
-Build instructions for the latest stable version <b>VisualVM 1.3.2</b>. If you want to build different version use links below:
+Build instructions for the latest stable version <b>VisualVM 1.3.3</b>. If you want to build different version use links below:
 <ul>
     <li><a href="build/build.html">trunk</a></li>
+    <li><a href="build/build132.html">VisualVM 1.3.2</a></li>
     <li><a href="build/build131.html">VisualVM 1.3.1</a></li>
     <li><a href="build/build13.html">VisualVM 1.3</a></li>
     <li><a href="build/build122.html">VisualVM 1.2.2</a></li>
@@ -21,7 +22,7 @@ Build instructions for the latest stable version <b>VisualVM 1.3.2</b>. If you w
 Check out source code with a SVN client using the following command. <br>
  
  
-<code> svn checkout https://svn.java.net/svn/visualvm~svn/branches/release132</code><br>
+<code> svn checkout https://svn.java.net/svn/visualvm~svn/branches/release133</code><br>
 </p>
 
 <p>There are two suites:</p>
@@ -30,9 +31,9 @@ Check out source code with a SVN client using the following command. <br>
 <li><b>plugins</b>: which contains the plugins available in the VisualVM Plugin Center.</li>
 </ul>
 
-<p>The layout in <a href="http://java.net/projects/visualvm/sources/svn/show/branches/release132">SVN</a> for VisualVM 1.3.2 release is:</p>
+<p>The layout in <a href="http://java.net/projects/visualvm/sources/svn/show/branches/release133">SVN</a> for VisualVM 1.3.3 release is:</p>
 <ul>
-    <li>release132
+    <li>release133
         <ul>
             <li>visualvm&nbsp;&nbsp;&lt;--- core tool suite</li>
             <li>plugins&nbsp;&nbsp;&nbsp;&nbsp;&lt;--- for plugin center (jconsole, mbeans, glassfish)</li>
@@ -40,15 +41,15 @@ Check out source code with a SVN client using the following command. <br>
     </li>
 </ul>
 <p>
-To build the visualvm core tool you need the NetBeans 6.9.1 platform and profiler binaries available
-<a href="http://java.net/projects/visualvm/downloads/download/dev/nb691_visualvm_01032011.zip">here</a>.
-These binaries must be extracted into the release132/visualvm directory. You can use <code>ant run</code>
+To build the visualvm core tool you need the NetBeans 7.0.1 platform and profiler binaries available
+<a href="http://java.net/projects/visualvm/downloads/download/dev/nb701_visualvm_15082011.zip">here</a>.
+These binaries must be extracted into the release133/visualvm directory. You can use <code>ant run</code>
 or <code>ant build-zip</code> to build or run VisualVM.
 </p>
 <p>
 To build the plugins suite, use <code>ant build</code> or <code>ant run</code>. This will automatically
-build the zip distribution of the visualvm core tool into release132/visualvm/dist/visualvm.zip and extract
-it into the release132/plugins/visualvm directory. After that the build of the plugins suite continues to
+build the zip distribution of the visualvm core tool into release133/visualvm/dist/visualvm.zip and extract
+it into the release133/plugins/visualvm directory. After that the build of the plugins suite continues to
 build each of the individual plugins.</p>
 </body>
 </html>
