--- a/www/eclipse-launcher.html
+++ b/www/eclipse-launcher.html
@@ -64,7 +64,7 @@
                     <h3>Download</h3>
                     <div style="background: #f0f1f2; padding: 10px; padding-left: 20px; margin-bottom: 10px;">
                         <div><a href="http://java.net/projects/visualvm/downloads/download/release133/visualvm_launcher_eclipse_36.zip"><span style="font-size: 14px; font-weight: bold;">VisualVM Launcher (Eclipse 3.6+)</span></a> (.zip, 39.7KB)</div>
-                        <div><a href="http://java.net/downloads/visualvm/release11/visualvm-launcher.zip"><span style="font-size: 10px; font-weight: bold;">VisualVM Launcher (Previous Version)</span></a> (.zip, 42KB)</div>
+                        <div><a href="http://java.net/downloads/visualvm/release11/visualvm-launcher.zip"><span style="font-size: 10px; font-weight: bold;">VisualVM Launcher (Eclipse 3.5)</span></a> (.zip, 42KB)</div>
                     </div>
 
                     <a name="installation"></a>
