--- a/www/news.html
+++ b/www/news.html
@@ -72,6 +72,11 @@
             <h3>News</h3>
             <div id="news">
 
+                <p><span class="news_date">September 27th, 2010:</span> JavaOne 2010 slides for BOF S313337
+                    &quot;Advanced Monitoring and Troubleshooting with VisualVM&quot;
+                    are now available as a <a href="http://java.net/projects/visualvm/downloads/download/documents/JavaOne-2010-BOF-S313337.pdf">.pdf document</a>.
+                </p>
+
                 <p><span class="news_date">September 20th, 2010:</span> VisualVM 1.3.1 released. This release upgrades the
                     underlying framework to the NetBeans Platform 6.9.1 and delivers several bugfixes. The tool can be
                     downloaded from the <a href="download.html">Download</a> page, sources are available in
