--- a/www/releases.html
+++ b/www/releases.html
@@ -78,14 +78,25 @@
                     <table id="reltable" border="1">
                         <tr><th><b>VisualVM</b></th><th><b>Corresponding Java&nbsp;VisualVM<br></b></th></tr>
 
-                         <tr>
+                        <tr>
                             <td>
-                                <div><b>VisualVM 1.3.2</b><br><small style="margin-left: 10px;">Released: March 3rd, 2011, <a href="http://java.net/downloads/visualvm/release132/visualvm_132.zip">Download</a> (<a href="http://java.net/downloads/visualvm/release132/visualvm_132-ml.zip">ml</a>), <a href="relnotes.html">Release Notes</a></small></div>
+                                <div><b>VisualVM 1.3.3</b><br><small style="margin-left: 10px;">Released: October 17th, 2011, <a href="http://java.net/projects/visualvm/downloads/download/release133/visualvm_133.zip">Download</a> (<a href="http://java.net/projects/visualvm/downloads/download/release133/visualvm_133-ml.zip">ml</a>), <a href="relnotes.html">Release Notes</a></small></div>
+                            </td>
+
+                            <td>
+                                <div>not released yet</div>
+                            </td>
+                        </tr>
+
+                        <tr>
+                            <td>
+                                <div><b>VisualVM 1.3.2</b><br><small style="margin-left: 10px;">Released: March 3rd, 2011, <a href="http://java.net/downloads/visualvm/release132/visualvm_132.zip">Download</a> (<a href="http://java.net/downloads/visualvm/release132/visualvm_132-ml.zip">ml</a>), <a href="relnotes132.html">Release Notes</a></small></div>
                             </td>
 
                             <td>
                                 <div><b>JDK 7</b><br><small style="margin-left: 10px;">Released: July 28th, 2011, <a href="http://www.oracle.com/technetwork/java/javase/jdk7-relnotes-429209.html">Release Notes</a></small></div>                            </td>
-                        </tr>
+                       </tr>
+
                        <tr>
                             <td>
                                 <div><b>VisualVM 1.3.1</b><br><small style="margin-left: 10px;">Released: September 20th, 2010, <a href="http://java.net/projects/visualvm/downloads/download/release131/visualvm_131.zip">Download</a> (<a href="http://java.net/projects/visualvm/downloads/download/release131/visualvm_131-ml.zip">ml</a>), <a href="relnotes131.html">Release Notes</a></small></div>
