Updating Releases table
git-svn-id: https://svn.java.net/svn/visualvm~svn/trunk@3018 ba0df5e5-9053-6d9f-941f-f112716aa91a

--- a/www/releases.html
+++ b/www/releases.html
@@ -94,7 +94,10 @@
                             </td>
 
                             <td>
-                                <div><b>JDK 7</b><br><small style="margin-left: 10px;">Released: July 28th, 2011, <a href="http://www.oracle.com/technetwork/java/javase/jdk7-relnotes-429209.html">Release Notes</a></small></div>                            </td>
+                                <div><b>JDK 7 Update 1</b><br><small style="margin-left: 10px;">Released: October 19th, 2011, <a href="http://www.oracle.com/technetwork/java/javase/7u1-relnotes-507962.html">Release Notes</a></small></div>
+                                <hr>
+                                <div><b>JDK 7</b><br><small style="margin-left: 10px;">Released: July 28th, 2011, <a href="http://www.oracle.com/technetwork/java/javase/jdk7-relnotes-429209.html">Release Notes</a></small></div>
+                            </td>
                        </tr>
 
                        <tr>
@@ -103,6 +106,8 @@
                             </td>
 
                             <td>
+                                <div><b>JDK 6 Update 29</b><br><small style="margin-left: 10px;">Released: October 19th, 2011, <a href="http://www.oracle.com/technetwork/java/javase/6u29-relnotes-507960.html">Release Notes</a></small></div>
+                                <hr>
                                 <div><b>JDK 6 Update 27</b><br><small style="margin-left: 10px;">Released: August 16th, 2011, <a href="http://www.oracle.com/technetwork/java/javase/6u27-relnotes-444147.html">Release Notes</a></small></div>
                                 <hr>
                                 <div><b>JDK 6 Update 26</b><br><small style="margin-left: 10px;">Released: June 7th, 2011, <a href="http://www.oracle.com/technetwork/java/javase/6u26releasenotes-401875.html">Release Notes</a></small></div>
