VisualVM 1.3.3 added; JDK 6u26-6u29 added
git-svn-id: https://svn.java.net/svn/visualvm~svn/trunk@3019 ba0df5e5-9053-6d9f-941f-f112716aa91a

--- a/www/pluginscenters.html
+++ b/www/pluginscenters.html
@@ -108,6 +108,16 @@
 
                             <tr>
                                 <td class="release">
+                                    <div><b>VisualVM 1.3.3</b></div>
+                                </td>
+
+                                <td class="plugincenter">
+                                    <div><small><a href="http://www.netbeans.info/uc/show_uc_content.php?ucurl=http://bits.netbeans.org/VisualVM/uc/release133/updates.xml">http://visualvm.java.net/uc/release133/updates.xml.gz</a></small></div>
+                                </td>
+                            </tr>
+
+                            <tr>
+                                <td class="release">
                                     <div><b>VisualVM 1.3.2</b></div>
                                 </td>
 
@@ -209,6 +219,14 @@
 
                             <tr>
                                 <td class="release">
+                                    <div><b>JDK 6 Update 29</b></div>
+                                    <hr>
+                                    <div><b>JDK 6 Update 28</b></div>
+                                    <hr>
+                                    <div><b>JDK 6 Update 27</b></div>
+                                    <hr>
+                                    <div><b>JDK 6 Update 26</b></div>
+                                    <hr>
                                     <div><b>JDK 6 Update 25</b></div>
                                     <hr>
                                     <div><b>JDK 6 Update 24</b></div>
