--- a/www/releases.html
+++ b/www/releases.html
@@ -94,6 +94,8 @@
                             </td>
 
                             <td>
+                                <div><b>JDK 7 Update 2</b><br><small style="margin-left: 10px;">Released: December 12th, 2011, <a href="http://www.oracle.com/technetwork/java/javase/7u2-relnotes-1394228.html">Release Notes</a></small></div>
+                                <hr>
                                 <div><b>JDK 7 Update 1</b><br><small style="margin-left: 10px;">Released: October 19th, 2011, <a href="http://www.oracle.com/technetwork/java/javase/7u1-relnotes-507962.html">Release Notes</a></small></div>
                                 <hr>
                                 <div><b>JDK 7</b><br><small style="margin-left: 10px;">Released: July 28th, 2011, <a href="http://www.oracle.com/technetwork/java/javase/jdk7-relnotes-429209.html">Release Notes</a></small></div>
