--- a/www/news.html
+++ b/www/news.html
@@ -72,6 +72,11 @@
             <h3>News</h3>
             <div id="news">
 
+                <p><span class="news_date">December 7th, 2010:</span> JDK 6 Update 23 released, it contains Java VisualVM tool
+                    based on VisualVM 1.3.1. Latest JDK 6 update from Oracle can be downloaded
+                    <a href="http://www.oracle.com/technetwork/java/javase/downloads/index.html">here</a>.
+                </p>
+
                 <p><span class="news_date">September 27th, 2010:</span> JavaOne 2010 slides for BOF S313337
                     &quot;Advanced Monitoring and Troubleshooting with VisualVM&quot;
                     are now available as a <a href="http://java.net/projects/visualvm/downloads/download/documents/JavaOne-2010-BOF-S313337.pdf">.pdf document</a>.
