JDK 7u3 and JDK 6u31 released
git-svn-id: https://svn.java.net/svn/visualvm~svn/trunk@3037 ba0df5e5-9053-6d9f-941f-f112716aa91a

--- a/www/releases.html
+++ b/www/releases.html
@@ -94,6 +94,10 @@
                             </td>
 
                             <td>
+                                <div><b>JDK 7 Update 3</b><br><small style="margin-left: 10px;">Released: February 14th, 2012, <a href="http://www.oracle.com/technetwork/java/javase/7u3-relnotes-1481928.html">Release Notes</a></small></div>
+                                <hr>
+                                <div><b>JDK 6 Update 31</b><br><small style="margin-left: 10px;">Released: February 14th, 2012, <a href="http://www.oracle.com/technetwork/java/javase/6u31-relnotes-1482342.html">Release Notes</a></small></div>
+                                <hr>
                                 <div><b>JDK 6 Update 30</b><br><small style="margin-left: 10px;">Released: December 12th, 2011, <a href="http://www.oracle.com/technetwork/java/javase/6u30-relnotes-1394870.html">Release Notes</a></small></div>
                                 <hr>
                                 <div><b>JDK 7 Update 2</b><br><small style="margin-left: 10px;">Released: December 12th, 2011, <a href="http://www.oracle.com/technetwork/java/javase/7u2-relnotes-1394228.html">Release Notes</a></small></div>
